fll-live-initramfs (2.0.12) UNRELEASED; urgency=low

  * Remove debian/README.Debian, it contained false information.

 -- Kel Modderman <kel@otaku42.de>  Tue, 19 Feb 2008 15:12:26 +1000

fll-live-initramfs (2.0.11) unstable; urgency=low

  * SELINUX_INIT=NO should no longer be required.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 07 Feb 2008 22:25:12 +0100

fll-live-initramfs (2.0.10) unstable; urgency=low

  * return to aufs as default unioning filesystem, unionfs up to and including
    2.2.3 still tends to segfault udev.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 29 Jan 2008 13:12:52 +0100

fll-live-initramfs (2.0.9) unstable; urgency=low

  * update to debhelper compat 6.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 18 Jan 2008 23:21:08 +0100

fll-live-initramfs (2.0.8) unstable; urgency=low

  * give unionfs 2.2.x a chance and prefer it over aufs as default.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 16 Jan 2008 21:34:55 +0100

fll-live-initramfs (2.0.7) unstable; urgency=low

  * suggest lvm2, we need to to load/ detect lvm2 volumes in the generated
    initramfs.
  * run scripts in local-top before attemtping to mount anyting, lvm2 depends
    on that.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 06 Jan 2008 01:44:27 +0100

fll-live-initramfs (2.0.6) unstable; urgency=low

  * Initial sqlzma support. fll_finger_fstype() now employs a fallback method
    of filesystem detection by nibbling the first few bytes of the file and
    grepping for a magic string.
  * Don't export FSSIZE from fll_finger_fstype(), it has not been used.
  * No need to do so much work to support sqlzma, revert a whole lot of code,
    and submit a patch to fstype so that the dd detection fallback can die
    soon.

 -- Kel Modderman <kel@otaku42.de>  Tue, 11 Dec 2007 19:24:16 +1000

fll-live-initramfs (2.0.5) unstable; urgency=low

  * update to Standards-Version 3.7.3, no changes necessary.
