@@ -1,11 +1,49 @@
 #!/usr/bin/make -f
-  
-include /usr/share/cdbs/1/rules/debhelper.mk
+
+# Uncomment this to turn on verbose mode.
+#export DH_VERBOSE=1
 
 INITRAMFS := debian/fll-live-initramfs/usr/share/initramfs-tools
 
-install/fll-live-initramfs::
+build: build-stamp
+build-stamp:
+	dh_testdir
+	touch $@
+
+clean:
+	dh_testdir
+	dh_testroot
+	dh_clean build-stamp install-stamp
+
+install: build install-stamp
+install-stamp:
+	dh_testdir
+	dh_testroot
+	dh_clean -k
+	
 	# hooks & scripts
 	for sh in hooks/* scripts/*; do \
 		install -m 0755 -D $$sh $(INITRAMFS)/$$sh; \
 	done
+	
+	touch $@
+
+binary-arch:
+# We have nothing to do by default.
+
+binary-indep: build install
+	dh_testdir
+	dh_testroot
+	dh_install
+	dh_installdocs
+	dh_installchangelogs
+	dh_link
+	dh_compress
+	dh_fixperms
+	dh_installdeb
+	dh_gencontrol
+	dh_md5sums
+	dh_builddeb
+
+binary: binary-indep binary-arch
+.PHONY: build clean install binary-indep binary-arch binary
